--- a/explore.css
+++ b/explore.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Permanent+Marker);
 html body {
   height: 100%;
   margin: 0;
@@ -82,19 +83,19 @@ footer a{
 }
 
 figure {
-  width: 29%;
+  width: 30%;
   background-color: #000;
-  padding: 1px;
+  padding: 10px;
   float: left;
-  margin: 1%;
-  border: 1px solid white;
+  margin: 10%;
+  border: 10px solid white;
 }
 
 figcaption{
   color: white;
   font-family: arial, sans-serif;
   text-align: center;
-  font-size: 90%;
+  font-size: 70%;
   width: 50%;
   margin: auto;
 }
